@@ -399,12 +399,12 @@ delete-word.label=Delete Next Word
 overwrite.label=Overwrite Mode
 home.label=Beginning of Line
 document-home.label=Beginning of Document
-select-doc-home.label=Select Beginning of Document
+select-document-home.label=Select to Beginning of Document
 end.label=End of Line
 document-end.label=End of Document
-select-doc-end.label=Select End of Document
-select-home.label=Select Beginning of Line
-select-end.label=Select End of Line
+select-document-end.label=Select to End of Document
+select-home.label=Select to Beginning of Line
+select-end.label=Select to End of Line
 prev-page.label=Previous Page
 next-page.label=Next Page
 select-prev-page.label=Select Previous Page
